--- a/python/Python Flask Tutorial Full-Featured Web App Part 1/Flask_Blog/templates/about.html
+++ b/python/Python Flask Tutorial Full-Featured Web App Part 1/Flask_Blog/templates/about.html
@@ -1,14 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>class 2/15</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+{% extends "layout.html" %}
+{% block content %} 
     <h1>About Page</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam sint corrupti voluptatem, cupiditate ratione architecto nisi nesciunt obcaecati debitis omnis, exercitationem libero. Exercitationem modi consequatur beatae sed natus possimus esse. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt nostrum quisquam perferendis alias eaque distinctio repudiandae harum expedita. Sapiente assumenda asperiores aliquam a dignissimos voluptas veniam est distinctio nemo harum.</p>
-</body>
-</html>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, voluptatum. Numquam repudiandae esse delectus repellat officiis pariatur. Mollitia alias fugiat quia aliquid assumenda excepturi cumque sunt, sed dolore corporis vitae!</p>
+{% endblock content %}
